# pcbu-desktop

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml
.github/workflows/: cmake.yml
cmake/: BuildHelper.cmake  DetectArchitecture.cmake  FindQtInstallation.cmake
common/: CMakeLists.txt
common/res/: de_DE.json  en_US.json  pt_BR.json  pt_PT.json  zh_CN.json
common/src/connection/: BaseConnection.cpp  BaseConnection.h  BaseUnlockConnection.cpp  BaseUnlockConnection.h  BaseUnlockServer.cpp  BaseUnlockServer.h  Packets.h  SocketDefs.h  UDPBroadcaster.cpp  UDPBroadcaster.h
common/src/connection/clients/: BTUnlockClient.Mac.h  BTUnlockClient.Mac.mm  BTUnlockClient.cpp  BTUnlockClient.h  BTUnlockClient.mm  TCPUnlockClient.cpp  TCPUnlockClient.h
common/src/connection/pairing/: PairingServer.cpp  PairingServer.h  PairingStructs.h  UDPPairingBroadcaster.cpp  UDPPairingBroadcaster.h
common/src/connection/servers/: BTUnlockServer.Mac.h  BTUnlockServer.Mac.mm  BTUnlockServer.cpp  BTUnlockServer.h  PairingServer.cpp  PairingServer.h  PairingStructs.h  TCPUnlockServer.cpp  TCPUnlockServer.h
common/src/connection/unlock/: BaseUnlockConnection.cpp  BaseUnlockConnection.h  UDPUnlockBroadcaster.cpp  UDPUnlockBroadcaster.h
common/src/connection/unlock/clients/: BTUnlockClient.Mac.h  BTUnlockClient.Mac.mm  BTUnlockClient.cpp  BTUnlockClient.h  TCPUnlockClient.cpp  TCPUnlockClient.h
common/src/connection/unlock/servers/: BTUnlockServer.Mac.h  BTUnlockServer.cpp  BTUnlockServer.h  TCPUnlockServer.cpp  TCPUnlockServer.h
common/src/handler/: I18n.cpp  I18n.h  KeyScanner.cpp  KeyScanner.h  UnlockHandler.cpp  UnlockHandler.h  UnlockState.h
common/src/platform/: BluetoothHelper.Linux.cpp  BluetoothHelper.Mac.mm  BluetoothHelper.Win.cpp  BluetoothHelper.h  NetworkHelper.cpp  NetworkHelper.h  PlatformHelper.Linux.cpp  PlatformHelper.Mac.cpp  PlatformHelper.Win.cpp  PlatformHelper.h
common/src/shell/: ElevatorCommands.h  ElevatorService.cpp  ElevatorService.h  IPCHelper.cpp  IPCHelper.h  LocalShell.cpp  LocalShell.h  Shell.cpp  Shell.h
common/src/storage/: AppSettings.cpp  AppSettings.h  LoggingSystem.cpp  LoggingSystem.h  PairedDevicesStorage.cpp  PairedDevicesStorage.h  PairingMethod.h
common/src/utils/: AppInfo.cpp  AppInfo.h  CryptUtils.cpp  CryptUtils.h  I18n.cpp  I18n.h  LocaleHelper.cpp  LocaleHelper.h  RegistryUtils.cpp  RegistryUtils.h  RestClient.cpp  RestClient.h  StringUtils.cpp  StringUtils.h  Utils.cpp  Utils.h
desktop/: CMakeLists.txt
desktop/elevator/: CMakeLists.txt
desktop/elevator/src/: main.cpp
desktop/qml/: AboutWindow.qml  LogsWindow.qml  MainWindow.qml  UnlockTestWindow.qml  UpdaterWindow.qml  resources.qrc
desktop/qml/base/: Form.qml  StepButtons.qml  StepForm.qml
desktop/qml/forms/: LoadingForm.qml  MainForm.qml  SettingsForm.qml
desktop/qml/pairing/: PairingBTPairForm.qml  PairingBTSelectForm.qml  PairingMethodForm.qml  PairingMethodTypeForm.qml  PairingPasswordForm.qml  PairingQRForm.qml
desktop/res/: licenses.txt  resources.qrc  resources_linux_arm64.qrc  resources_linux_x64.qrc  resources_mac_arm64.qrc  resources_win_arm64.qrc  resources_win_x64.qrc
desktop/res/i18n/: de_DE.json  en_US.json  zh_CN.json
desktop/res/icons/: icons.icns
desktop/res/selinux/: pcbu_auth_policy.pp  pcbu_auth_policy.te
desktop/src/: main.cpp  winres.rc
desktop/src/installer/: PAMHelper.cpp  PAMHelper.h  ServiceInstaller.Linux.cpp  ServiceInstaller.Mac.cpp  ServiceInstaller.Win.cpp  ServiceInstaller.h  WinFirewallHelper.cpp  WinFirewallHelper.h
desktop/src/ui/: LogsWindow.cpp  LogsWindow.h  MainWindow.cpp  MainWindow.h  PairingForm.cpp  PairingForm.h  SettingsForm.cpp  SettingsForm.h  UnlockTestWindow.cpp  UnlockTestWindow.h  UpdaterWindow.cpp  UpdaterWindow.h
desktop/src/ui/helpers/: I18nWrapper.cpp  I18nWrapper.h
desktop/src/ui/models/: DevicesTableModel.cpp  DevicesTableModel.h  NetworkListModel.cpp  NetworkListModel.h  UserListModel.cpp  UserListModel.h
desktop/src/utils/: I18n.cpp  I18n.h  QRUtils.cpp  QRUtils.h  QtI18n.cpp  QtI18n.h  ResourceHelper.cpp  ResourceHelper.h
natives/pam-pcbiounlock/: CMakeLists.txt
natives/pam-pcbiounlock/src/: pam_account.cpp  pam_auth.cpp  pam_password.cpp  pam_session.cpp
natives/pcbu-auth/: CMakeLists.txt
natives/pcbu-auth/src/: main.cpp
natives/win-pcbiounlock/: CMakeLists.txt
natives/win-pcbiounlock/src/: CSampleProvider.cpp  CSampleProvider.h  CUnlockCredential.cpp  CUnlockCredential.h  CUnlockListener.cpp  CUnlockListener.h  Dll.cpp  common.h  guid.cpp  guid.h  helpers.cpp  helpers.h
natives/win-pcbiounlock/test/: Test.cpp
pkg/: build-desktop.sh
pkg/linux/: Dockerfile_arm64  Dockerfile_x64  PCBioUnlock.desktop  docker-build.sh  run-app.sh
pkg/mac/: Info.plist
pkg/win/: installer.iss
